nginx-k8s/k8s-sample1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: LoadBalancer
  selector:
    app: nginx-proxy
  ports:
  - name: http
    port: 7777
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-deploy
  labels:
    app: nginx-proxy
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: nginx-proxy
  template:
    metadata:
      labels:
        app: nginx-proxy
    spec:
      containers:
      - name: hello-nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
