nginx-k8s/k8s-sample6.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - http:
      paths:
      - path: /path1/
        backend:
          serviceName: nginx1-svc
          servicePort: 7030
      # default rooting
      - backend:
          serviceName: nginx3-svc
          servicePort: 7050

---
apiVersion: v1
kind: Service
metadata:
  name: nginx1-svc
spec:
  type: NodePort
  selector:
    app: nginx-proxy1
  ports:
  - name: http
    protocol: TCP
    port: 7030
    targetPort: 81

---
apiVersion: v1
kind: Service
metadata:
  name: nginx3-svc
spec:
  type: NodePort
  selector:
    app: nginx-proxy3
  ports:
  - name: http
    protocol: TCP
    port: 7050
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-deployment1
  labels:
    app: nginx-proxy1
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: nginx-proxy1
  template:
    metadata:
      labels:
        app: nginx-proxy1
    spec:
      containers:
      - name: proxy-nginx
        image: nginx:alpine
        ports:
        - containerPort: 81
        volumeMounts:
        - name: proxy-conf
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: proxy.conf
      - name: hello-nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: index-html
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
      - name: proxy-conf
        configMap:
          name: nginx-conf
      - name: index-html
        configMap:
          name: nginx-conf

---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-deployment3
  labels:
    app: nginx-proxy3
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: nginx-proxy3
  template:
    metadata:
      labels:
        app: nginx-proxy3
    spec:
      containers:
      - name: hello-nginx3
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: dafault-index-html
          mountPath: /usr/share/nginx/html/index.html
          subPath: dafault-index-html
      volumes:
      - name: dafault-index-html
        configMap:
          name: nginx-conf
